# icasm

backend/: .gitignore  README.md  pyproject.toml
backend/app/: .env.template
backend/app/alembic/: env.py
backend/app/core/: config.py
backend/app/core/models/: __init__.py  base.py  db_helper.py  mixins.py  user.py
