[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Popov Nikita <popovnikita01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
alembic = "^1.13.3"
pydantic-settings = "^2.5.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.8.0"
pytest = "^8.3.3"
pyright = "^1.1.381"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
